Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127011

Attribution scanner error messages are unhelpful

XMLWordPrintable

    • Linux/X11
    • 481827547 (dev)

      In a recent failing integration, the attribution scanner reported:

          Could not parse file .../qtbase/src/testlib/3rdparty/catch2/qt_attribution.json: missing value separator
          Could not parse file .../qtbase/src/testlib/3rdparty/linux/qt_attribution.json: unterminated object
      

      Notice, first, that the errors give no line numbers.

      The "missing value separator" turned out to be that I'd used [...] around a Key: Value sequence that should have been enclosed in {...} – this took some noticing, as I was looking for a missing separator, which wasn't the actual problem.

      The "unterminated object" turned out to be a missing comma after a new entry in a a Key: Value sequence. This really was a missing value separator, but wasn't reported as such.

      In practice, these error messages were useless, beyond telling me which two files to examine, and actively distracting, by directing my attention to the wrong things.

        For Gerrit Dashboard: QTBUG-127011
        # Subject Branch Project Status CR V

            qtbuildsystem Qt Build System Team
            Eddy Edward Welbourne
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes