qtattributionsscanner: Provide file, line for invalid JSON errors

Fixes: QTBUG-127011
Change-Id: Ia6409e2266391d0cc625ef69ac238584ac29fa5b
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>